--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -48,6 +49,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   firebase_core: ^3.1.1
   validators: ^3.0.0
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
