--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,9 +47,10 @@ dependencies:
   go_router: ^14.2.0
   firebase_analytics: ^11.0.1
   font_awesome_flutter: ^10.7.0
-  firebase_core: ^3.1.1
+  firebase_core: ^3.6.0
   validators: ^3.0.0
   flutter_screenutil: ^5.9.3
+
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +78,7 @@ flutter:
   assets:
     - assets/images/
     - assets/animations/
+    - assets/locales/
 
 
   fonts:
