--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_core: ^3.6.0
   validators: ^3.0.0
   flutter_screenutil: ^5.9.3
+  flutter_animate: ^4.5.0
 
 
 dev_dependencies:
