--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,13 +37,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   data_connection_checker_tv: ^0.3.5-nullsafety
-  dio: ^5.3.4
-  shared_preferences: ^2.2.2
+  dio: ^5.7.0
+  shared_preferences: ^2.3.2
   dartz: ^0.10.1
-  flutter_bloc: ^8.1.3
-  slang_flutter: ^3.31.0
+  flutter_bloc: ^8.1.6
   logger: ^2.3.0
-  equatable: ^2.0.5
   go_router: ^14.2.0
   firebase_analytics: ^11.3.3
   font_awesome_flutter: ^10.7.0
@@ -51,6 +49,9 @@ dependencies:
   validators: ^3.0.0
   flutter_screenutil: ^5.9.3
   flutter_animate: ^4.5.0
+  freezed: ^2.5.7
+  internet_connection_checker_plus: ^2.5.2
+  freezed_annotation: ^2.4.4
 
 
 dev_dependencies:
@@ -63,6 +64,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  derry: ^1.5.0
+  build_runner: ^2.4.13
+
+scripts: derry.yaml
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
